src/objects/OppCloseOutStatus__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>exclude decline status for OppCloseOutBatchProcess Class</description>
    <fields>
        <fullName>Reason_For_Cancellation__c</fullName>
        <label>Reason_For_Cancellation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>closedOutName__c</fullName>
        <label>closedOutName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>excludeStageNameString__c</fullName>
        <label>excludeStageNameString</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OppCloseOutStatus</label>
</CustomObject>